Fixed a silly indent

--- a/templates/all_snacks.html
+++ b/templates/all_snacks.html
@@ -22,9 +22,7 @@
                 {% for snack in snacks %}
                     <tr>
                         <td>{{snack.name}}</td>
-                        <td>{{snack.category}}
-                            
-                        </td>
+                        <td>{{snack.category}}</td>
                         <td>{{snack.price}}</td>
                         <td>{{snack.is_healthy}}</td>
                         <td>{{snack.quantity}}</td>
