Added some more bootstrap to the templates, will be adding validation

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Home Page</title>
 </head>
 <body>
     {% for msg in get_flashed_messages() %}
-    <p>
+    <p >
         {{ msg }}
     </p>
     {% endfor %}
 
-    <a href="/snacks/new">Make a new snack</a>
-    <a href="/snacks/all">See all snacks</a>
+    <h3><a href="/snacks/new">Make a new snack</a></h3>
+    <h3><a href="/snacks/all">See all snacks</a></h3>
 </body>
 </html>
