--- a/templates/add_snack_form.html
+++ b/templates/add_snack_form.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Add Snack</title>
 </head>
 <body>
-    <h1>New Snack</h1>
+    <div class="container-fluid">
+    <h1 class="display-2">New Snack</h1>
     <form method="POST">
             {{ form.hidden_tag() }}
         {% for field in form 
             if field.widget.input_type != 'hidden' %}
+        <div class="form-group">
         <p>
             {{field.label}}
             {{field}}
         </p>
+        </div>
         {% endfor %}
         <button type="submit">Submit Snack</button>    
     </form>
+    </div>
 </body>
 </html>
