--- a/templates/add_snack_form.html
+++ b/templates/add_snack_form.html
@@ -7,7 +7,7 @@
     <title>Add Snack</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
     <h1 class="display-2">New Snack</h1>
     <form method="POST">
             {{ form.hidden_tag() }}
@@ -15,10 +15,10 @@
         <div class="form-group">
         <p>
             {{field.label}}
-            {{field}}
+            {{field(class_="form-control")}}
 
             {% for err in field.errors %}
-            {{ err }}
+            <p class="text-danger">{{ err }}</p>
             {% endfor %}
         </p>
         </div>
