--- a/templates/all_snacks.html
+++ b/templates/all_snacks.html
@@ -35,7 +35,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <button><a href="/snacks/new">Add New Snack</a></button>
+        <a href="/snacks/new" class="btn btn-success">Add New Snack</a>
     </div>
 
 <script src="https://use.fontawesome.com/5c23010372.js"></script>
